[gd_scene load_steps=5 format=3 uid="uid://5ui3esnmfxbw"]

[ext_resource type="Script" uid="uid://b5wn82r5p3wxb" path="res://scripts/settings_menu.gd" id="1_hayap"]

[sub_resource type="Animation" id="Animation_2o76q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_ovrgc"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6bivr"]
_data = {
&"RESET": SubResource("Animation_2o76q"),
&"fade_in": SubResource("Animation_ovrgc")
}

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hayap")
metadata/_edit_vertical_guides_ = [571.0]

[node name="Fade" type="ColorRect" parent="."]
visible = false
z_index = 10
layout_mode = 0
offset_left = -4.0
offset_right = 1160.0
offset_bottom = 651.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Fade")
libraries = {
&"": SubResource("AnimationLibrary_6bivr")
}

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 359.0
offset_top = 100.0
offset_right = 786.0
offset_bottom = 268.0
value = 100.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = 97.0
offset_right = 805.0
offset_bottom = 174.0
theme_override_font_sizes/normal_font_size = 56
text = "Master Volume"
fit_content = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 496.0
offset_right = 698.0
offset_bottom = 618.0
theme_override_font_sizes/font_size = 76
text = "Back"

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
